Added charter for every test and updated pom.xml to java version